[project]
name = "vhs"
authors = [{ name = "Tamika Nomara", email = "taminomara@gmail.com" }]
description = "Write terminal GIFs as code for integration testing and demoing your CLI tools, now with python"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = ["PyGithub>=1.59,<2.10", "requests>=2.31,<2.35"]

[dependency-groups]
dev = [
    { include-group = "ci" },
    { include-group = "doc" },
    { include-group = "lint" },
    { include-group = "test" },
]
test = [
    "html5lib~=1.1",
    "pyright==1.1.409",
    "pytest-cov==7.1.0",
    "pytest==9.0.3",
    "sybil==10.0.1",
]
doc = [
    "furo==2025.12.19",
    "sphinx==9.1.0",
    "sphinx-autobuild==2025.8.25",
    "sphinx_design==0.7.0",
    "sybil==10.0.1",
]
lint = [
    "prek==0.3.13",
    "ruff==0.15.12",
]
ci = [
    "pytest-cov==7.1.0",
    "tox==4.53.1",
    "tox-uv==1.35.2",
]

[project.urls]
Documentation = "https://python-vhs.readthedocs.io/en/stable/"
Issues = "https://github.com/taminomara/python-vhs/issues/"
Source = "https://github.com/taminomara/python-vhs/"
Changelog = "https://github.com/taminomara/python-vhs/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel>=0.40"]

[tool.setuptools_scm]
write_to = "vhs/_version.py"

[tool.pyright]
include = ["vhs"]
exclude = [
    "**/__pycache__",
    "vhs/_version.py",
]
typeCheckingMode = "strict"
pythonVersion = "3.14"
pythonPlatform = "All"

reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
reportPrivateUsage = "none"
reportUnusedFunction = "none"
reportConstantRedefinition = "none"
reportRedeclaration = "none"
reportDeprecated = "none"
deprecateTypingAliases = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "INP", "T20", "PT", "RET", "SIM", "SLOT", "RUF022"]
ignore = [
    "E402",   # Module level import not at top of file
    "E722",   # Do not use bare `except`
    "E741",   # Ambiguous variable name
    "E731",   # Do not assign a `lambda` expression, use a `def`
    "PT015",  # Assertion is always `False`
    "PT011",  # Too broad error type
    "PT012",  # `pytest.raises()` block should contain a single simple statement
    "PT017",  # Found assertion on exception `e` in `except` block
    "RET505", # Unnecessary `else` after `return` statement
    "RET506", # Unnecessary `else` after `raise` statement
    "RET507", # Unnecessary `else` after `continue` statement
    "RET508", # Unnecessary `else` after `break` statement
    "SIM103", # Return the negated condition directly
    "SIM105", # Use `contextlib.suppress` instead of `try`-`except`-`pass`
    "SIM108", # Use ternary operator instead of `if`-`else`-block
    "SIM114", # Combine `if` branches using logical `or` operator
    "SIM118", # Use `key in dict` instead of `key in dict.keys()`
]
extend-safe-fixes = [
    "RUF022", # Sort `__all__`.
    "PT006",  # Rewrite arguments for `pytest.mark.parametrize`.
]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"test/**/*" = ["T20", "I002", "SIM102", "SIM117"]
"docs/**/*" = ["T20", "I002", "INP001"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
default-groups = ["dev"]
